# SXI_L4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml
src/sxi_l4/: fit.py  main.py  start.py
tests/: test_fit.py  test_main.py
